istio/path-routing/1-goapps-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-istio
  labels:
    app: goapp-istio
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: goapp-istio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-v1
spec:
  selector:
    matchLabels:
      app: goapp-istio
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: goapp-istio
        version: v1
    spec:
      containers:
      - name: goapp-istio
        image: gcr.io/drk290/goapp-istio:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-v2
spec:
  selector:
    matchLabels:
      app: goapp-istio
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: goapp-istio
        version: v2
    spec:
      containers:
      - name: hello-istio
        image: gcr.io/dkr290/goapp:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-istio-console
spec:
  selector:
    matchLabels:
      app: goapp-istio-console
  replicas: 1
  template:
    metadata:
      labels:
        app: goapp-istio-console
    spec:
      containers:
      - image: busybox
        name: console
        command: ["sleep", "3600"]
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
      restartPolicy: Always
