istio/path-routing/4-istio-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: goapp-istio-destination
spec:
  host: goapp-istio
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
