istio/path-routing/6-istio-user-agent-match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goapp-istio
spec:
  hosts:
  - "goapp.example.com"
  gateways:
  - istio-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
      - destination:
          host: goapp-istio
          subset: v2
  - route:
    - destination:
        host: goapp-istio
        subset: v1
