istio/path-routing/7-routing-user-cookie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goapp-istio
spec:
  hosts:
  - "goapp.example.com"
  gateways:
  - istio-gateway
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=user01)(;.*)?$"
    route:
      - destination:
          host: goapp-istio
          subset: v2
  - route:
    - destination:
        host: goapp-istio
        subset: v1
